data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2090.wast
;; 1. Create a block with a `loop` inside and use a `br_if` to break the loop conditionally based on a stack value, checking if the `pushControl` method manages the label and stack correctly in `wizard_engine`, while inducing a possible infinite loop in WebAssembly if not properly handled.

(assert_invalid
  (module (func $conditional-break-loop
    (block (loop (result i32) (i32.const 0) (br_if 0 (i32.const 1)) (i32.const 1) (br 1)))
  ))
  "type mismatch"
)